# pokegen

./: .gitignore  README.md  app.py  name_generator.ipynb  notebook.ipynb  pyproject.toml
src/pokegen/: __init__.py  data.py  generate.py  model.py  train.py
