[project]
name = "pokegen"
version = "0.1.0"
description = "Pokémon name generator using a Transformer decoder built from scratch in PyTorch"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch>=2.6",
    "numpy>=2.0",
    "httpx>=0.28",
    "scikit-learn>=1.6",
    "gradio>=5.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
rocm = [
    "torch==2.11.0+rocm7.2",
    "torchvision==0.26.0+rocm7.2",
    "triton-rocm==3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokegen"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv.sources]
"torch" = { index = "pytorch-rocm", marker = "extra == 'rocm'" }
"torchvision" = { index = "pytorch-rocm", marker = "extra == 'rocm'" }
"triton-rocm" = { index = "pytorch-rocm", marker = "extra == 'rocm'" }